# openapi-to-mcp-demo

./: .gitignore  BEFORE_AFTER.md  COMPOSITE_QUICKREF.md  COMPOSITE_SOLUTION.md  COMPOSITE_TOOLS_FEATURE.md  COMPOSITE_TOOL_ORCHESTRATION.md  DECLARATIVE_ARCHITECTURE.md  DECLARATIVE_QUICKSTART.md  FILE_INVENTORY.md  IMPLEMENTATION_SUMMARY.md  MCP_PATTERN_EXPLAINED.md  QUICKSTART.md  README.md  UI_CHANGES_QUICKREF.md  UI_REFINEMENTS.md  VERIFICATION_CHECKLIST.md  project plan.md
api/: .env.example  pyproject.toml  requirements.txt
api/app/: main.py
api/app/api/: routes.py
api/app/models/: schemas.py
api/app/services/: server_generator.py
api/app/templates/: .env.template  README.template.md  pyproject.template.toml  server.template.py
backend/app/services/: llm_enricher.py  openapi_parser.py  server_generator.py  tool_generator.py
backend/templates/: README.template.md  generic_server.py  pyproject.template.toml  test_loader.py  test_tools.json
crm/: README.md  main.py  pyproject.toml  requirements.txt  seed_data.py
crm/docs/: crm_openapi.yaml
docs/: GUIDE.md  SCRIPT.md  notes.md
examples/: tools_payload.json
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: CompositeToolCreator.vue  EndpointList.vue  ServerGenerator.vue  ToolPreview.vue
generated-servers/products-mcp/: .env.example  README.md  pyproject.toml  server.py  tools.json
generated-servers/products-mcp (1)/: README.md  pyproject.toml  server.py  tools.json
ui/: index.html  package.json
ui/src/: App.vue
ui/src/stores/: converter.js
(+13 files in other folders)
