[project]
name = "ecommerce-dummy-api"
version = "0.1.0"
description = "FastAPI implementation of the E-Commerce OpenAPI specification for testing"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic[email]>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py", "seed_data.py"]

[tool.uv]
dev-dependencies = []
